Fix overflow open nav in mobile

--- a/public/assets/style/cmps/AppHeader.css
+++ b/public/assets/style/cmps/AppHeader.css
@@ -55,8 +55,6 @@
     .app-header {
         position: relative;
 
-
-
         .mobile-nav-btn {
             display: flex;
             justify-content: center;
@@ -79,7 +77,7 @@
 
             display: block;
 
-            &.open {
+            &.open-nav {
                 opacity: 1;
                 pointer-events: visible;
 
@@ -109,7 +107,7 @@
             transform: translateX(100%);
             transition: 200ms ease-in-out;
 
-            &.open {
+            &.open-nav {
                 transform: translateX(0);
             }
         }
